# outrun

./: .drone.yml  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo_debug.toml  GRAMMAR.bnf  INTERPRETER_PLAN.md  LANGUAGE_SPEC.md  PHASE_4_PLAN.md  README.md  SMT_INTEGRATION_PLAN.md  SYNTAX_SPEC.md  TUPLE_IMPLEMENTATION_PLAN.md  TYPED_AST_EXTENSION_PLAN.md  TYPE_SYSTEM_PLAN.md  UNIFIED_MODULE_SYSTEM_PLAN.md  debug_option_test.outrun  example.outrun  outrun.sublime-syntax  test_guard_evaluation.outrun
editor-support/tree-sitter-outrun/: .tool-versions  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  test.outrun  tree-sitter.json
editor-support/tree-sitter-outrun/queries/: highlights.scm  indents.scm  injections.scm  textobjects.scm
editor-support/tree-sitter-outrun/src/: grammar.json  node-types.json  parser.c
outrun/: Cargo.toml  README.md  build.rs  build_syntax.rs
outrun-interpreter/: AGENTS.md  CLAUDE.md  Cargo.toml  SMT_INTEGRATION_PLAN.md  debug_inspect_test.rs  test_binary_byte_at_simple.rs  test_unary_minus.rs
outrun-interpreter/src/: builtins.rs  call_stack.rs  context.rs  environment.rs  error.rs  evaluator.rs  function_call_context.rs  function_dispatch.rs  function_executor.rs  interpreter.rs  intrinsics.rs  lib.rs  list.rs  pattern.rs  patterns.rs  runtime_assertions.rs  test_harness.rs  type_extraction.rs  types.rs  value.rs
outrun-interpreter/src/tests/: mod.rs  test_acceptance_atom_protocol_functions.rs  test_acceptance_atom_trait_functions.rs  test_acceptance_basic_literals.rs  test_acceptance_binary_protocol_functions.rs  test_acceptance_binary_trait_functions.rs  test_acceptance_expressions.rs  test_acceptance_float_binary_ops.rs  test_acceptance_float_protocol_functions.rs  test_acceptance_float_trait_functions.rs  test_acceptance_float_unary_ops.rs  test_acceptance_integer_binary_ops.rs  test_acceptance_integer_protocol_functions.rs  test_acceptance_integer_trait_functions.rs  test_acceptance_integer_unary_ops.rs  test_acceptance_list_protocol_functions.rs  test_acceptance_list_trait_functions.rs  test_acceptance_pattern_matching.rs  test_acceptance_string_protocol_functions.rs  test_acceptance_string_trait_functions.rs  test_complex_arithmetic.rs  test_comprehensive_repl_scenarios.rs  test_core_library_function_body_investigation.rs  test_debug_literal_ast.rs  test_equality_auto_impl.rs  test_function_dispatch.rs  test_guard_evaluation_debug.rs  test_harness_examples.rs  test_integer_equality_runtime_bug.rs  test_intrinsic_registry_completeness.rs  test_list_runtime.rs  test_minimal_user_code.rs  test_not_equal_runtime_fix.rs  test_option_pattern_matching.rs  test_option_pattern_matching_simple.rs  test_option_runtime.rs  test_pattern_matching.rs  test_phase4_error_handling.rs  test_pipeline_integration.rs  test_protocol_implementation_investigation.rs  (+5 more)
outrun-typechecker/: AGENTS.md  CLAUDE.md  Cargo.toml
outrun-typechecker/docs/: ARCHITECTURE.md  EXAMPLES.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  USER_GUIDE.md
outrun-typechecker/examples/: error_reporting_demo.rs
outrun-typechecker/proptest-regressions/tests/: test_property_based.txt
outrun-typechecker/src/: checker.rs  constraints.rs  context.rs  core_library.rs  debug_spans.rs  dependency_graph.rs  desugaring.rs  dispatch.rs  error.rs  exhaustiveness.rs  inference.rs  inference.rs.backup  intrinsics.rs  lib.rs  multi_program_compiler.rs  package.rs  patterns.rs  purity.rs  registry.rs  shared_context.rs  simple_context.rs  typed_ast.rs  typed_ast_builder.rs  types.rs  unification.rs  universal_dispatch.rs  visitor.rs
outrun-typechecker/src/checker/: context.rs  expressions.rs  functions.rs  mod.rs  patterns.rs  trait_definitions.rs
outrun-typechecker/src/compilation/: compiler_environment.rs  function_registry.rs  mod.rs  program_collection.rs  type_checking.rs  visitors.rs
outrun-typechecker/src/desugaring_tests/: test_operator_desugaring_integration.rs
outrun-typechecker/src/dispatch/: lookup.rs  mod.rs  resolution.rs
outrun-typechecker/src/smt/: cache.rs  constraints.rs  exhaustiveness.rs  mod.rs  solver.rs  solver_pool.rs  suggestions.rs  translator.rs
outrun-typechecker/src/tests/: mod.rs  test_actual_impl_block_generics.rs  test_anonymous_functions.rs  test_ast_conversion_utilities.rs  test_async_smt_performance.rs  test_automatic_any_inspect.rs  test_basic_type_checking.rs  test_basic_typed_ast.rs  test_boolean_type_bug.rs  test_case_branch_unification.rs  test_case_expression_verification.rs  test_case_guard_fix.rs  test_collection_typed_ast.rs  test_completion_suggestions.rs  test_complex_trait_constraints.rs  test_conditional_impl_blocks.rs  test_constraint_extraction.rs  test_constraint_system_redesign.rs  test_constraint_validation.rs  test_constraint_without_core.rs  test_control_flow_typed_ast.rs  test_core_boolean_debug.rs  test_core_library_debug.rs  test_core_library_isolated.rs  test_core_library_loading.rs  test_core_library_replication.rs  test_core_library_runtime.rs  test_debug_clause_ids.rs  test_debug_info_comments.rs  test_debug_integer64.rs  test_debug_memory.rs  test_default_implementations.rs  test_default_protocol_implementations.rs  test_default_trait_implementations.rs  test_dependency_fix.rs  test_detailed_core_failures.rs  test_detailed_errors.rs  test_dispatch_resolution.rs  test_dispatch_table_construction.rs  test_dispatch_table_monomorphisation.rs  (+118 more)
outrun-typechecker/src/types/: collections.rs  concrete.rs  interning.rs  introspection.rs  mod.rs  protocols.rs  traits.rs
outrun-typechecker/tests/: basic_type_checking.rs  trait_case_exhaustiveness.rs  trait_case_patterns.rs
outrun/src/: main.rs  repl.rs  sexpr.rs  simple_repl.rs
tree-sitter-outrun/: CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-outrun/bindings/go/: binding.go
tree-sitter-outrun/src/: grammar.json  node-types.json  parser.c
(+397 files in other folders)
