[package]
name = "outrun-typechecker"
version = "0.1.0"
edition = "2021"
description = "Static type checker for the Outrun programming language"
license = "MIT OR Apache-2.0"

[dependencies]
# Error handling and reporting
miette = { version = "7.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0"

# Parser integration
outrun-parser = { path = "../outrun-parser" }

# Utilities
indexmap = "2.0"
lazy_static = "1.4"
petgraph = "0.8"

# SAT solver for guard exhaustiveness checking
rustsat = "0.7.2"
rustsat-cadical = "0.7.2"

# SMT solver for type constraint solving
z3 = "0.12"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"
