[package]
name = "outrun-typechecker"
version = "0.1.0"
edition = "2021"
description = "Static type checker for the Outrun programming language"
license = "MIT OR Apache-2.0"

[dependencies]
# Error handling and reporting
miette = { version = "7.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0"

# Parser integration
outrun-parser = { path = "../outrun-parser" }

# Utilities
indexmap = "2.0"
lazy_static = "1.4"
petgraph = "0.8"

# SMT solver for all constraint solving (type checking, exhaustiveness, etc.)
z3 = "0.12"

# LRU cache for SMT constraint solving optimization
lru = "0.12"

# Async runtime for parallel SMT solving and file I/O
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
futures = "0.3"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"

[[bin]]
name = "profile-core-lib"
path = "src/bin/profile-core-lib.rs"

[[bin]]
name = "profile-detailed"
path = "src/bin/profile-detailed.rs"

[[bin]]
name = "profile-phases"
path = "src/bin/profile-phases.rs"

[[bin]]
name = "profile-direct"
path = "src/bin/profile-direct.rs"

[[bin]]
name = "profile-smt-trace"
path = "src/bin/profile-smt-trace.rs"

[[bin]]
name = "profile-smt-debug"
path = "src/bin/profile-smt-debug.rs"

[[bin]]
name = "benchmark-parallel-loading"
path = "src/bin/benchmark-parallel-loading.rs"

[[bin]]
name = "test-parallel-trait-extraction"
path = "src/bin/test-parallel-trait-extraction.rs"

[[bin]]
name = "benchmark-parallel-ast-extraction"
path = "src/bin/benchmark-parallel-ast-extraction.rs"
