[package]
name = "outrun-typechecker"
version = "0.1.0"
edition = "2021"
description = "Hindley-Milner type checker for the Outrun programming language"
license = "MIT OR Apache-2.0"

[dependencies]
# Reuse existing infrastructure
outrun-parser = { path = "../outrun-parser" }

# Error handling (reuse existing patterns)
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"

# Data structures and utilities
indexmap = "2.0"       # Ordered maps for deterministic iteration
smallvec = "1.11"      # Optimized small vectors for type arguments
string-interner = "0.15" # Type name interning for performance

[dev-dependencies]
proptest = "1.4"       # Property-based testing for type soundness

[[example]]
name = "error_reporting_demo"