[package]
authors = ["James Harton <james@harton.dev>"]
autoexamples = false
categories = ["parser-implementations", "parsing", "text-editors"]
description = "A statically-typed, immutible, functional language where the protocol is king!"
edition = "2021"
keywords = ["incremental", "parsing", "tree-sitter", "outrun"]
license = "MIT"
name = "tree-sitter-outrun"
readme = "README.md"
repository = "https://harton.dev/outrun/outrun"
version = "0.1.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
