[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
authors = [{name = "James Harton", email = "james@harton.dev"}]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
description = "A statically-typed, immutible, functional language where the protocol is king!"
keywords = ["incremental", "parsing", "tree-sitter", "outrun"]
license.text = "MIT"
name = "tree-sitter-outrun"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
Funding = "https://github.com/sponsor/jimsynz"
Homepage = "https://harton.dev/outrun/outrun"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
